--- a/AplikacjaNawigacyjna.Web/Views/Home/Index.cshtml
+++ b/AplikacjaNawigacyjna.Web/Views/Home/Index.cshtml
@@ -49,10 +49,6 @@
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 <script>
 
-  // Domyślne współrzędne (jeśli nie ma modelu)
-  const lat = @Html.Raw(Json.Serialize(Model.current.Latitude));
-  const lng = @Html.Raw(Json.Serialize(Model.current.Longitude));
-
     const redIcon = L.icon({
           iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-red.png',
           shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/images/marker-shadow.png',
@@ -72,19 +68,13 @@
         });
 
   // Inicjalizacja mapy
-  var map = L.map('map').setView([lat, lng], 13);
+  var map = L.map('map').locate({ setView: true, maxZoom: 16 });
 
   // Warstwa OSM
   L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
     maxZoom: 19,
     attribution: '&copy; OpenStreetMap contributors'
   }).addTo(map);
-
-  // Marker Twojej lokalizacji
-  L.marker([lat, lng])
-    .addTo(map)
-    .bindPopup("Twoja lokalizacja")
-    .openPopup();
 
      function getBoundsAndLoadEvents() {
           const bounds = map.getBounds();
@@ -108,7 +98,7 @@
               .then(data => {
                   data.forEach(event => {
                         const marker = L.marker([event.location.latitude, event.location.longitude], { icon: redIcon }).addTo(map);
-                        marker.bindPopup(`<strong>Zdarzenie drogowe</strong>`); //${event.type}
+                        marker.bindPopup(`<strong>Zdarzenie drogowe</strong>`);
                   });
               });
       }
@@ -138,11 +128,6 @@
                     });
                 });
         }
-
-      map.on('moveend', getBoundsAndLoadPOIs);
-      map.on('moveend', getBoundsAndLoadEvents);
-      getBoundsAndLoadPOIs()
-      getBoundsAndLoadEvents();
 
   // Dodaj markery dla Model.locations
   @foreach (var loc in Model.locations)
@@ -266,25 +251,32 @@
 
         document.body.appendChild(form);
         form.submit();
-    }
+    }        
 
       let routeLayer = null;
 
       document.getElementById('routeForm').addEventListener('submit', function (e) {
           e.preventDefault();
-          const start = document.getElementById('startPoint').value.split(',');
-          const end = document.getElementById('endPoint').value.split(',');
-          let startLat = start[0]+"."+start[1];
-          let endLat = end[0]+"."+end[1];
-          let startLng = start[2]+"."+start[3];
-          let endLng = end[2]+"."+end[3];
+          const startSelect = document.getElementById('startPoint');
+          const endSelect = document.getElementById('endPoint');
+          const start = startSelect.value.split(',');
+          const end = endSelect.value.split(',');
+          const startName = startSelect.options[startSelect.selectedIndex].text;
+          const endName = endSelect.options[endSelect.selectedIndex].text;
+
+          let startLat = start[0] + "." + start[1];
+          let endLat = end[0] + "." + end[1];
+          let startLng = start[2] + "." + start[3];
+          let endLng = end[2] + "." + end[3];
 
           fetch('/Home/CalculateRoute', {
               method: 'POST',
               headers: { 'Content-Type': 'application/json' },
               body: JSON.stringify({
                   Origin: { Latitude: parseFloat(startLat), Longitude: parseFloat(startLng) },
-                  Destination: { Latitude: parseFloat(endLat), Longitude: parseFloat(endLng) }
+                  Destination: { Latitude: parseFloat(endLat), Longitude: parseFloat(endLng) },
+                  StartName: startName,
+                  EndName: endName
               })
           })
           .then(res => res.json())
@@ -302,4 +294,9 @@
               }
           });
       });
+
+        map.on('moveend', getBoundsAndLoadPOIs);
+        map.on('moveend', getBoundsAndLoadEvents);
+        getBoundsAndLoadPOIs()
+        getBoundsAndLoadEvents();
 </script>
